--- a/mine.html
+++ b/mine.html
@@ -47,7 +47,7 @@
           <h1 class="banner--title">Discover Greece</h1>
           <p class="banner--paragraph">travel with unique experience</p>
         </div>
-        <div class="banner--arrow--icon">
+        <div class="banner--arrow--icon" id="bannerId" onclick="menuClick()">
           <img src="images/Rigth side arrow.svg" alt="left side arrow" />
         </div>
       </div>
