--- a/mine.html
+++ b/mine.html
@@ -358,63 +358,65 @@
       </div>
     </figure>
     <footer>
-      <div class="footer--container">
-        <div class="footer--column">
-          <div class="footer--column--inner">
-            <h3 class="footer--title">Quick Links</h3>
-            <ul class="column">
-              <li><a class="footer--list" href="#">Home</a></li>
-              <li><a class="footer--list" href="#">About Company</a></li>
-              <li><a class="footer--list" href="#">Testimonials</a></li>
-              <li><a class="footer--list" href="#">Infrastructure</a></li>
-            </ul>
+      <div class="footer--inner">
+        <div class="footer--container">
+          <div class="footer--column">
+            <div class="footer--column--inner">
+              <h3 class="footer--title">Quick Links</h3>
+              <ul class="column">
+                <li><a class="footer--list" href="#">Home</a></li>
+                <li><a class="footer--list" href="#">About Company</a></li>
+                <li><a class="footer--list" href="#">Testimonials</a></li>
+                <li><a class="footer--list" href="#">Infrastructure</a></li>
+              </ul>
+            </div>
+            <div class="footer--column--inner">
+              <h3 class="footer--title">Suport</h3>
+              <ul class="column">
+                <li><a class="footer--list" href="#">Get Started</a></li>
+                <li><a class="footer--list" href="#">Lorem</a></li>
+                <li><a class="footer--list" href="#">Help</a></li>
+                <li><a class="footer--list" href="#">Ipsum</a></li>
+              </ul>
+            </div>
+            <div class="footer--column--inner">
+              <h3 class="footer--title">Address</h3>
+              <ul class="column">
+                <li>
+                  <a class="footer--list" href="#">14, 1 Ellis bridge ST, </a>
+                </li>
+                <li>
+                  <a class="footer--list" href="#">auckland 3500, Australia</a>
+                </li>
+                <li><a class="footer--list" href="#">+1234567890</a></li>
+                <li><a class="footer--list" href="#">contactus@demo.com</a></li>
+              </ul>
+            </div>
           </div>
-          <div>
-            <h3 class="footer--title">Suport</h3>
-            <ul class="column">
-              <li><a class="footer--list" href="#">Get Started</a></li>
-              <li><a class="footer--list" href="#">Lorem</a></li>
-              <li><a class="footer--list" href="#">Help</a></li>
-              <li><a class="footer--list" href="#">Ipsum</a></li>
-            </ul>
-          </div>
-          <div>
-            <h3 class="footer--title">Address</h3>
-            <ul class="column">
-              <li>
-                <a class="footer--list" href="#">14, 1 Ellis bridge ST, </a>
-              </li>
-              <li>
-                <a class="footer--list" href="#">auckland 3500, Australia</a>
-              </li>
-              <li><a class="footer--list" href="#">+1234567890</a></li>
-              <li><a class="footer--list" href="#">contactus@demo.com</a></li>
-            </ul>
-          </div>
-        </div>
-        <div>
-          <label class="footer--label" for=""
-            >Subscribe To Our Newsletter</label
-          >
-          <div class="footer--input">
-            <input
-              class="footer--email"
-              type="email"
-              placeholder="Your Email"
-            />
+          <div class="footer--form">
+            <label class="footer--label" for=""
+              >Subscribe To Our Newsletter</label
+            >
+            <div class="footer--input">
+              <input
+                class="footer--email"
+                type="email"
+                placeholder="Your Email"
+              />
 
-            <img
-              class="footer--icon--bg"
-              src="images/send-icon.svg"
-              alt="send-icon"
-            />
+              <img
+                class="footer--icon--bg"
+                src="images/send-icon.svg"
+                alt="send-icon"
+              />
+            </div>
           </div>
         </div>
       </div>
+      <div class="all--right">
+        <h4 class="--text">trourism©All Rights Reserved</h4>
+      </div>
     </footer>
-    <div class="all--right">
-      <h4 class="--text">trourism©All Rights Reserved</h4>
-    </div>
   </body>
   <script src="js/app.js"></script>
 </html>
